# dotman

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yml  check.yml  clippy.yml  test.yml
src/: bin.rs  cli.yml  lib.rs  main.rs
src/common/: global.rs  mod.rs  types.rs  util.rs
src/config/: cli.yml  mod.rs
src/config/cli/: internal.rs  mod.rs
src/config/dotrc/: mod.rs
src/config/rcrc/: mod.rs
src/linker/: mod.rs
src/resolver/: mod.rs
tests/: test.rs
tests/common/: mod.rs
