[package]
name = "dotman"
version = "0.1.2"
authors = ["Thejaswi Kadur <thejas.kadur@gmail.com>"]
edition = "2018"
description = "Dotfile management tool"
license = "MIT"
repository = "https://github.com/tkadur/dotman"
readme = "README.md"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "dot"
path = "src/bin.rs"

[dependencies]
# For safety, assume the semver policy of no stability before 1.0.0.
# This is different than Cargo's defaults.
gethostname = "0.2.0"
dirs = "^2.0.1"
serde = { version = "^1.0.97", features = ["derive"] }
serde_yaml = "0.8.9"
derive_more = "0.15.0"
derive-getters = "0.0.8"
clap = { version = "^2.33.0", features = ["yaml"] }
contracts = { version = "0.3.0", features = ["override_debug"] }
walkdir = "^2.2.9"
globset = "0.4.4"
lazy_static = "^1.3.0"
structopt = "0.2.18"
failure = "0.1.5"
itertools = "0.8.0"

[dev-dependencies]
tempfile = "^3.1.0"
pretty_assertions = "0.6.1"