[package]
name = "dotman"
version = "0.2.0"
authors = ["Thejaswi Kadur <thejas.kadur@gmail.com>"]
edition = "2018"
description = "Dotfile management tool"
license = "MIT"
repository = "https://github.com/tkadur/dotman"
readme = "README.md"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "dot"
path = "src/bin.rs"

[dependencies]
# For safety, assume the semver policy of no stability before 1.0.0.
# This is different than Cargo's defaults.
clap = { version = "^2.33.0", features = ["yaml"] }
contracts = { version = "0.3.0", features = ["override_debug"] }
derive-getters = "0.1.0"
derive_more = "0.99.2"
dirs = "^2.0.2"
failure = "0.1.6"
gethostname = "0.2.1"
globset = "0.4.4"
itertools = "0.8.2"
lazy_static = "^1.3.0"
serde = { version = "^1.0.99", features = ["derive"] }
serde_yaml = "0.8.11"
structopt = "0.3.7"
strum = "0.17.1"
strum_macros = "0.17.1"
walkdir = "^2.2.9"
wsl = "0.1.0"

[dev-dependencies]
tempfile = "^3.1.0"
pretty_assertions = "0.6.1"