[package]
name = "dotman"
version = "0.2.0"
authors = ["Thejaswi Kadur <thejas.kadur@gmail.com>"]
edition = "2018"
description = "Dotfile management tool"
license = "MIT"
repository = "https://github.com/tkadur/dotman"
readme = "README.md"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "dot"
path = "src/bin.rs"

[dependencies]
# For safety, assume the semver policy of no stability before 1.0.0.
# This is different than Cargo's defaults.
clap = { version = "^2.33.1", features = ["yaml"] }
contracts = { version = "0.4.0", features = ["override_debug"] }
derive_more = "0.99.9"
dirs = "^3.0.1"
failure = "0.1.8"
gethostname = "0.2.1"
globset = "0.4.5"
itertools = "0.9.0"
lazy_static = "^1.4.0"
serde = { version = "^1.0.114", features = ["derive"] }
serde_yaml = "0.8.13"
structopt = "0.3.15"
strum = "0.18.0"
strum_macros = "0.18.0"
walkdir = "^2.3.1"
wsl = "0.1.0"

[dev-dependencies]
tempfile = "^3.1.0"
pretty_assertions = "0.6.1"